# ha-tasmota-update

./: .gitignore  Makefile  README.md  hacs.json  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_device.yml  feature_request.yml
.github/scripts/: bump_version.py  calculate_release_details.py  version_manager.py
.github/workflows/: auto-labeler.yml  build.yml  ci-orchestrator.yml  issue-orchestrator.yml  labeler.yml  lint.yml  release.yml  test.yml
custom_components/tasmota_fwupdate/: __init__.py  config_flow.py  const.py  device_automation.py  device_trigger.py  discovery.py  entity.py  manifest.json  strings.json  update.py
custom_components/tasmota_fwupdate/hatasmota/: __init__.py  button.py  camera.py  config_validation.py  device_status.py  discovery.py  entity.py  fan.py  light.py  mqtt.py  relay.py  sensor.py  shutter.py  status_sensor.py  switch.py  trigger.py  update.py  utils.py
