[project]
name = "ha-tasmota-update"
version = "1.0.0"
description = "Home Assistant integration for Tasmota firmware updates."
authors = [
    {name = "FaserF", email = "github@fabiseitz.de"}
]
readme = "README.md"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.14"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
disable_error_code = ["misc", "call-arg"]

[[tool.mypy.overrides]]
module = [
    "custom_components.tasmota_fwupdate.*",
]
disallow_subclassing_any = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "var-annotated", "arg-type", "method-assign", "import-untyped"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
    "testing_config",
]
asyncio_mode = "auto"
